search NEW address

--- a/apps/block_scout_web/lib/block_scout_web/templates/address/_responsive_hash.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address/_responsive_hash.html.eex
@@ -1,4 +1,4 @@
-<%= if @contract do %>
+<%= if false do %>
     <span class="<%= if @contract do %>contract-address<% end %>" data-address-hash="<%= @address %>">
       <%= if name = primary_name(@address) do %>
          <%= if @use_custom_tooltip == true do %>
