add theme: newton

--- a/apps/block_scout_web/assets/css/theme/_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_variables.scss
@@ -22,6 +22,7 @@
 // @import "tomochain_variables";
 // @import "rsk_variables";
 // @import "ethercore_variables";
+// @import "newton_variables";
 
 // responsive breakpoints
 $breakpoint-xs: 320px;
