update theme: newton
card color

--- a/apps/block_scout_web/assets/css/theme/_newton_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_newton_variables.scss
@@ -210,7 +210,7 @@ $card-tab-active: $ntc-primary;
 $card-default-border-radius: 12px;
 $card-horizontal-padding: 30px;
 $card-vertical-padding: 30px;
-$card-background-1: $primary;
+$card-background-1: $ntc-primary;
 $card-background-1-text-color: white;
 $card-tab-icon-color: $ntc-success;
 $card-tab-icon-color-active: white;
