--- a/apps/block_scout_web/assets/css/theme/_newton_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_newton_variables.scss
@@ -260,7 +260,7 @@ $card-tab-icon-color-active: white;
     color: $ntc-secondary !important;
     font-weight: 700 !important;
     .fa-check-circle {
-      color: $ntc-primary !important;
+      color: $ntc-success !important;
     }
   }
 }
