--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
@@ -17,27 +17,26 @@
 
     <div class="row">
       <div class="col-xs-12 col-lg-3">
-        <p class="footer-info-text"><%= gettext("Blockscout is a tool for inspecting and analyzing EVM based blockchains. Blockchain explorer for Ethereum Networks.") %></p>
+        <p class="footer-info-text"><%= gettext("Newton Explorer is a Block Explorer and Analytics Platform for Newton NewChain Networks.") %></p>
         <div class="footer-social-icons">
-          <a href="https://github.com/poanetwork/blockscout" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Github") %>'>
+          <a href="https://github.com/newtonproject/blockscout" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Github") %>'>
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.twitter.com/_blockscout/" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Twitter") %>'>
+          <a href="https://www.twitter.com/newton_project/" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Twitter") %>'>
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://t.me/poa_network" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Telegram") %>'>
+          <a href="https://t.me/newtonproject" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Telegram") %>'>
             <i class="fab fa-telegram-plane"></i>
           </a>
         </div>
       </div>
 
       <div class="col-xs-12 col-md-4 col-lg-<%= col_size %> footer-list">
-        <h3>BlockScout</h3>
+        <h3>Newton Project</h3>
         <ul>
-          <li><a href="<%= issue_link(@conn) %>" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Submit an Issue") %></a></li>
-          <li><a href="https://github.com/poanetwork/blockscout" rel="noreferrer" class="footer-link"><%= gettext("Contribute") %></a></li>
-          <li><a href="https://gitter.im/poanetwork/blockscout" rel="noreferrer" class="footer-link"><%= gettext("Chat") %></a></li>
-          <li><a href="https://forum.poa.network/c/blockscout" rel="noreferrer" class="footer-link"><%= gettext("Support") %></a></li>
+          <li><a href="https://newtonproject.org" rel="noreferrer" class="footer-link"><%= gettext("Newton Project Website") %></a></li>
+          <li><a href="https://developer.newtonproject.org" rel="noreferrer" class="footer-link"><%= gettext("Developer Website") %></a></li>
+          <li><a href="https://newtonproject.org/contact" rel="noreferrer" class="footer-link"><%= gettext("Contact Team") %></a></li>
         </ul>
       </div>
       <% main_nets = main_nets(other_networks()) %>
@@ -78,11 +77,17 @@
       <% end %>
     </div>
 
+    <div class="row">
+      <div class="col-xs-12 col-md-12 col-lg-12">
+        <p class="footer-blockscout-text"><%= gettext("Newton Explorer is developed based on open-source project BlockScout") %></p>
+      </div>
+    </div>
+
     <% version = version() %>
 
     <%= unless ignore_version?(version) do %>
       <% release_link = release_link(version) %>
-      <div>
+      <div style="display:none;">
         <%= gettext("Version") %>: <%= release_link %>
       </div>
     <% end %>
