--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_default_title.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_default_title.html.eex
@@ -1,3 +1,3 @@
 <title>
-  <%= gettext("%{subnetwork} Explorer - BlockScout", subnetwork: subnetwork_title()) %>
+  <%= gettext("Newton Explorer (%{subnetwork})", subnetwork: subnetwork_title()) %>
 </title>
