--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction/_metatags.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction/_metatags.html.eex
@@ -1,7 +1,7 @@
 <%= if assigns[:transaction] do %>
   <title>
     <%= gettext(
-          "Transaction %{transaction} - %{subnetwork} Explorer",
+          "Transaction %{transaction} - Newton Explorer (%{subnetwork})",
           transaction: to_string(@transaction.hash),
           subnetwork: BlockScoutWeb.LayoutView.subnetwork_title()
         ) %>
