--- a/apps/block_scout_web/lib/block_scout_web/templates/tokens/overview/_details.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/tokens/overview/_details.html.eex
@@ -72,7 +72,7 @@
               <% end %>
             </span>
             <div class="d-flex flex-row justify-content-start text-muted">
-              <span class="mr-4"> <%= @token.type %> </span>
+              <span class="mr-4"> <%= NewAsset.convertType(@token.type) %> </span>
               <span token-holder-count class="mr-4"></span>
               <span token-transfer-count class="mr-4"></span>
               <%= if decimals?(@token) do %>
