drop marketCap from dashboard chart (temp-fix)
This is a temporary fix for Newton.
If the marketCap data issue is solved, simply revert this commit.

--- a/apps/block_scout_web/assets/css/theme/_newton_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_newton_variables.scss
@@ -48,6 +48,7 @@ $footer-item-disc-color: $ntc-light;
 // Dashboard
 $dashboard-line-color-price: $ntc-accent;
 $dashboard-line-color-market: $ntc-accent-2;
+$dashboard-line-color-transactions: $ntc-accent-2;
 $dashboard-banner-chart-legend-label-color: $ntc-light;
 $dashboard-stats-item-label-color: $dashboard-banner-chart-legend-label-color;
 $dashboard-banner-chart-legend-value-color: white;
