update theme: newton
UI improvements:
api card

--- a/apps/block_scout_web/assets/css/theme/_newton_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_newton_variables.scss
@@ -432,3 +432,8 @@ $tooltip-color: white;
   text-transform: uppercase !important;
 }
 
+// Etc.
+.api-anchors-list {
+	border-radius: $ntss-md;
+	margin: $ntss-md;
+}
